--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: 独一无二的小个性
+# header-img: images/681257_1379316868_6.jpg
+# description: "Every failure is leading towards success."
+email: 83214742@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  owenliu1122
+# github_repo: "https://github.com/owenliu1122/owenliu1122.github.io.git" # you code repository
 
 # Build settings
 markdown: kramdown
