--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,14 @@ title: 独一无二的小个性
 # description: "Every failure is leading towards success."
 email: 83214742@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  本站内容仅用于学习研究和备忘记录，不喜勿喷.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  owenliu1122
 # github_repo: "https://github.com/owenliu1122/owenliu1122.github.io.git" # you code repository
+
+# SNS settings
+RSS: false
 
 # Build settings
 markdown: kramdown
