--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,20 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  owenliu1122
+jianshu_username:   1cab22ba60e5
 # github_repo: "https://github.com/owenliu1122/owenliu1122.github.io.git" # you code repository
 
 # SNS settings
 RSS: false
-
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+permalink: pretty
+# paginate: 10
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
