--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ date_format: '%Y-%m-%d'
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url:
 baseurl:
-permalink: pretty
+permalink: /:year-:month-:day-:title
 
 # Pagination
 paginate: 10
@@ -76,7 +76,7 @@ plugins:
 # ---------------------------------------------------------------
 
 # Put your favicon.ico into `assets/` directory.
-favicon: /assets/images/profile.jpg
+favicon: /assets/images/favicon.png
 
 # Set default keywords (Use a comma to separate)
 keywords: "owenliu1122, Owen Liu"
