--- a/_config.yml
+++ b/_config.yml
@@ -382,8 +382,8 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: owenliu
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
